--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ actix-cors = "0.7.0"
 actix-web = "4.0.0"
 dotenv = "0.15.0"
 serde = "1.0.215"
+serde_json = "1.0.88"
+env_logger = "0.11.5"
+jsonwebtoken = "9.3.0"
+chrono = "0.4.38"
+lettre = "0.11.10"
