--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ serde = "1.0.215"
 serde_json = "1.0.88"
 env_logger = "0.11.5"
 jsonwebtoken = "9.3.0"
-chrono = "0.4.38"
+chrono ={version =  "0.4.38",  features = ["serde"] }
 lettre = "0.11.10"
 sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres"] }
+diesel = { version = "2.2.5", features = ["postgres", "r2d2", "chrono"] }
+actix = "0.13.5"
+bcrypt = "0.16.0"
+# uuid = "1.11.0"
